--- a/code/UI/Hud/SpireHud.scss
+++ b/code/UI/Hud/SpireHud.scss
@@ -25,7 +25,7 @@ SpireHud {
 
 // Default label properties
 label {
-    font-family: Cinzel;
+    font-family: $primary-font;
     color: white;
     text-shadow: 1px 1px 2px black;
 }
