--- a/code/Gamemodes/Clash/UI/ClashHudPanel.scss
+++ b/code/Gamemodes/Clash/UI/ClashHudPanel.scss
@@ -1,5 +1,47 @@
 @import "/UI/Theme.scss";
 
+ScoreAvatar {
+    transition: all 0.2s ease;
+    width: 56px;
+    height: 40px;
+    margin-right: 4px;
+    background-position: top;
+
+    &.dead {
+        top: 8px;
+        opacity: 0.2;
+    }
+
+    > .label {
+        position: absolute;
+        top: -32px;
+        width: 100%;
+        height: 100%;
+        font-size: 18px;
+        font-family: $secondary-font;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+
+    > .avatar {
+        &.gold {
+            border: 2px solid #FFD700;
+        }
+
+
+        &.silver {
+            border: 2px solid #C0C0C0;
+        }
+
+
+        &.bronze {
+            border: 2px solid #CD7F32;
+        }
+    }
+}
+
 ClashHudPanel {
     position: absolute;
     width: 100%;
@@ -42,22 +84,6 @@ ClashHudPanel {
                 align-content: center;
                 padding-right: 8px;
                 padding-left: 8px;
-
-                > .avatar {
-                    transition: all 0.2s ease;
-                    width: 48px;
-                    height: 40px;
-                    margin-right: 4px;
-
-                    &.dead {
-                        top: 8px;
-                        opacity: 0.2;
-                    }
-                }
-
-                > .avatar {
-                    border: 1px solid $nameplate-color;
-                }
             }
         }
     }
