--- a/code/Gamemodes/Clash/UI/ClashHudPanel.scss
+++ b/code/Gamemodes/Clash/UI/ClashHudPanel.scss
@@ -3,7 +3,7 @@
 ScoreAvatar {
     transition: all 0.2s ease;
     width: 56px;
-    height: 40px;
+    height: 46px;
     margin-right: 4px;
     background-position: top;
 
@@ -25,20 +25,22 @@ ScoreAvatar {
         align-content: center;
     }
 
+    > .name {
+        position: absolute;
+        top: 32px;
+        width: 100%;
+        height: 100%;
+        font-size: 12px;
+        font-family: $secondary-font;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+
     > .avatar {
-        &.gold {
-            border: 2px solid #FFD700;
-        }
-
-
-        &.silver {
-            border: 2px solid #C0C0C0;
-        }
-
-
-        &.bronze {
-            border: 2px solid #CD7F32;
-        }
+        border: 1px solid $nameplate-color;
+        background-image: linear-gradient( to bottom, rgba( black, 1 ), rgba( black, 0 ) );
     }
 }
 
@@ -57,7 +59,7 @@ ClashHudPanel {
 
         > .separator {
             position: absolute;
-            top: 72px;
+            top: 90px;
             width: 140px;
             height: 40px;
 
